# DjangoRestReact

./: .gitignore  LICENSE  README.md  pyproject.toml
music_controller/: db.sqlite3
music_controller/api/: models.py  serializers.py  views.py
music_controller/api/migrations/: 0001_initial.py
music_controller/frontend/: package-lock.json  package.json
music_controller/frontend/src/components/: App.js  CreateRoomPage.js  HomePage.js  RoomJoinPage.js
music_controller/frontend/static/frontend/: main.js  main.js.LICENSE.txt
music_controller/music_controller/: settings.py
